@@ -1,6 +1,7 @@
 == 0.3.3 (In Git)
 
 === Bugfixes
+* Background, Scenario Outline, Before Hook interaction (#309 Aslak Hellesøy)
 * Multiline String snippets no longer give misleading info. It's a String, not a PyString that's sent to step def.
 
 == 0.3.2 2009-05-05
